--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -28,3 +29,5 @@
   },
   "homepage": "https://github.com/churchjg/Project6#readme"
 }
+
+//mongodb+srv://churchjg:Twxl39jtct@cluster0.4ya5y.mongodb.net/getcooking?retryWrites=true&w=majority
